# bionic-fg

./: .gitignore  CMakeLists.txt  README.md  VkLayer_BIONIC_framegen.json  build-android-arm64.sh
include/bionic_fg/: config.hpp  session.hpp
src/: framegen_context.cpp  framegen_context.hpp  jni_bridge.cpp  logging.hpp  session.cpp
src/vk_layer/: layer.cpp
src/vulkan/: vk_impl.cpp  vk_types.hpp
